[package]
name = "conrod_bug"
version = "0.1.0"
authors = ["Tom Daffin <tom@greenpear.com>"]
edition = "2018"

[dependencies]
# conrod_core = "0.63.0"
# conrod_piston = "0.63.0"
conrod_core = { git = "https://github.com/tdaffin/conrod", branch = "fix_crop" }
conrod_piston = { git = "https://github.com/tdaffin/conrod", branch = "fix_crop" }

piston = "0.42"
piston-texture = "0.6"
pistoncore-glutin_window = "0.54"
piston2d-graphics = "0.30"
piston2d-opengl_graphics = "0.59"